[package]
name = "sola-raylib-sys"
version = "6.0.0-dev.0"
authors = ["Brett Chalupa <brett@brettchalupa.com>", "raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
license = "Zlib"
description = "Raw FFI bindings for raylib. sola-raylib-sys N.x tracks raylib N.x (e.g. 5.x → raylib 5.5; 6.x → raylib 6.0)."
documentation = "https://docs.rs/sola-raylib-sys"
repository = "https://github.com/brettchalupa/sola-raylib-rs"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
categories = ["external-ffi-bindings"]
edition = "2018"
exclude = ["raylib/examples/*", "raylib/projects/*", "raylib/templates/*"]

[build-dependencies]
cmake = "0.1.51"
cc = "1.0"
bindgen = "0.72"

[features]
# Build Raylib headless for docs/esoteric platforms. Up to you to link.
nobuild = []
# Generate bindings automatically.
# You can turn this off if you wanna go into the source and put in your own bindings.rs, which is
# useful since bindgen doesn't work on esoteric platforms.
bindgen = []
# Build for wayland on linux. Should fix #119
wayland = []
# Bindgen is default
default = ["bindgen"]

# OpenGL stuff, intended for fixing #122
opengl_33 = []
opengl_21 = []
# opengl_11 = [] I couldn't get this one working, the others were fine in my limited testing (unsure about wayland compatibility)
opengl_es_20 = []
opengl_es_30 = []
sdl = []

# Allow disabling screenshots and gifs on f12
noscreenshot = []
nogif = []

# config.h's SUPPORT_CUSTOM_FRAME_CONTROL
custom_frame_control = []

[lints]
workspace = true
