[package]
name = "sola-raylib"
version = "5.5.3-dev"
authors = ["Brett Chalupa <brett@brettchalupa.com>", "raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
license = "Zlib"
readme = "../README.md"
description = "Safe Rust bindings for raylib. sola-raylib N.x tracks raylib N.x (e.g. 5.x → raylib 5.5; 6.x → raylib 6.0)."
documentation = "https://docs.rs/sola-raylib"
repository = "https://github.com/brettchalupa/sola-raylib"
keywords = ["bindings", "raylib", "gamedev"]
categories = ["api-bindings", "game-engines", "graphics"]
edition = "2018"
autoexamples = false

[dependencies]
raylib-sys = { package = "sola-raylib-sys", version = "5.5.3-dev", path = "../raylib-sys" }
cfg-if = "1.0.0"
serde = { version = "1.0.125", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }
imgui = { version = "0.12.0", optional = true, features = [] }
imgui-sys = { version = "0.12.0", optional = true }

mint = { version = "0.5.9", optional = true }

thiserror = "1.0.61"

paste = "1.0"
seq-macro = "0.3.5"

[dev-dependencies]
structopt = "0.3"
rand = "0.8.5"

[features]
nightly = []
with_serde = ["serde", "serde_json"]
wayland = ["raylib-sys/wayland"]
convert_mint = ["mint"]
custom_frame_control = ["raylib-sys/custom_frame_control"]
opengl_33 = ["raylib-sys/opengl_33"]
opengl_21 = ["raylib-sys/opengl_21"]
opengl_es_20 = ["raylib-sys/opengl_es_20"]
opengl_es_30 = ["raylib-sys/opengl_es_30"]
sdl = ["raylib-sys/sdl"]
noscreenshot = ["raylib-sys/noscreenshot"]
nogif = ["raylib-sys/nogif"]
imgui = ["raylib-sys/imgui", "dep:imgui", "dep:imgui-sys"]
nobuild = ["raylib-sys/nobuild"]
bindgen = ["raylib-sys/bindgen"]
default = ["bindgen"]

[lints]
workspace = true
